--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "knex": "node --no-warnings --loader tsx ./node_modules/knex/bin/cli.js"
+    "knex": "node --no-warnings --loader tsx ./node_modules/knex/bin/cli.js",
+    "test": "npx vitest"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,8 @@
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/knex": "^0.16.1",
     "@types/node": "^18.13.0",
+    "@types/supertest": "^2.0.12",
+    "supertest": "^6.3.3",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
@@ -23,6 +26,7 @@
     "fastify": "^4.12.0",
     "knex": "^2.4.2",
     "sqlite3": "^5",
+    "vitest": "^0.28.5",
     "zod": "^3.20.6"
   }
 }
